2005-06-09  Mark McLoughlin  <markmc@redhat.com>

	Fix for bug #305869 - closing the details window using
	the WM close button doesn't give you a save confirmation
	dialog.

	* admin-tool/editorwindow.py:
	(ProfileEditorWindow.__init__): connect to the toplevel
	"delete-event" signal
	(ProfileEditorWindow.__handle_delete_event): if changes
	have been made, display the saveconfirm dialog, allowing
	the window to be destroyed unless "Cancel" is clicked.

2005-06-09  Mark McLoughlin  <markmc@redhat.com>

	Fix for bug #305865 - traceback on opening user's
	dialog with a profile which has been made the default
	for all users.

	* admin-tool/usersdialog.py: connect to the checkbox
	toggled signal only after we've set its initial state.

2005-06-08  Mark McLoughlin  <markmc@redhat.com>

	Fixes bug #305761

	* admin-tool/profilesdialog.py:
	(ProfilesDialog.__delete_currently_selected): remove
	any references to the profile from userdb too.
	
2005-06-08  Mark McLoughlin  <markmc@redhat.com>
	
	* admin-tool/profilesdialog.py:
	(ProfilesModel.reload): use UserDatabase.get_profiles()
	(ProfilesDialog.__make_unique_profile_name): ditto
	
	* lib/userdb.py: use config.PROFILESDIR rather
	than /etc/desktop-profiles

2005-06-08  Mark McLoughlin  <markmc@redhat.com>

	When creating a new profile, make sure the profile name
	is unique. Fixes bug #305759

	* admin-tool/profilesdialog.py:
	(ProfilesDialog.__make_unique_profile_name): if the
	profile name already exists, make it unique by adding
	an integer in parenthesis to the name.
	
2005-06-08  Mark McLoughlin  <markmc@redhat.com>
	
	* admin-tool/profilesdialog.py:
	(ProfilesModel.reload): sort the profiles list
	(ProfilesDialog.__delete_currently_selected): select
	another profile in the list when we delete a profile.

2005-06-07  Mark McLoughlin  <markmc@redhat.com>

	Fix for bug #305395

	* admin-tool/profilesdialog.py: make the "Base on" combo
	insensitive if there's no existing profiles.
