@@ -79,6 +79,12 @@ class ProfileModel (gtk.ListStore):
             
             revisions_model = RevisionsModel (self.profile.storage, path)
             first_revision = revisions_model.get_iter_first ()
+
+            dprint ("  source %s, path %s, description %s, revision %s" %
+                    (source_name,
+                     path,
+                     source.get_path_description (path),
+                     revisions_model[first_revision][RevisionsModel.COLUMN_DATE]))
             
             self.set (self.prepend (),
                       self.COLUMN_SOURCE,          source_name,
@@ -102,12 +108,13 @@ class RevisionsModel (gtk.ListStore):
         self.reload ()
 
     def reload (self):
-        dprint ("Reloading revisions model")
+        dprint ("Reloading revisions model; path = %s" % self.path)
         self.clear ()
         iter = None
         revisions = self.storage.get_revisions (self.path)
         revisions.reverse ()
         for (revision, timestamp) in revisions:
+            dprint ("  revision %s, time %s" % (revision, timestamp))
             self.set (self.prepend (),
                       self.COLUMN_REVISION, revision,
                       self.COLUMN_DATE,     time.strftime (self.time_format,
@@ -167,6 +174,8 @@ class ProfileEditorWindow:
             else:
                 self.current_revision = None
 
+        dprint ("Reloaded models; current_revision = %s" % self.current_revision)
+
     def __set_needs_saving (self, needs_saving):
         if needs_saving:
             if not self.last_save_time:
@@ -223,6 +232,7 @@ class ProfileEditorWindow:
         
     def __handle_clear_history (self, action):
         self.storage.clear_revisions ()
+        self.current_revision = None
         self.__set_needs_saving (True)
 
     def __handle_about (self, action):
